Programa/gramatica.output
<<<<<<< HEAD
Estado 116 conflictos: 2 desplazamiento/reducción
Estado 118 conflictos: 14 desplazamiento/reducción
Estado 138 conflictos: 1 desplazamiento/reducción
Estado 145 conflictos: 3 desplazamiento/reducción
Estado 164 conflictos: 2 desplazamiento/reducción
Estado 165 conflictos: 2 desplazamiento/reducción
Estado 166 conflictos: 2 desplazamiento/reducción
Estado 167 conflictos: 2 desplazamiento/reducción
Estado 168 conflictos: 2 desplazamiento/reducción
Estado 169 conflictos: 2 desplazamiento/reducción
Estado 170 conflictos: 14 desplazamiento/reducción
Estado 171 conflictos: 14 desplazamiento/reducción
Estado 172 conflictos: 2 desplazamiento/reducción
Estado 173 conflictos: 2 desplazamiento/reducción
Estado 174 conflictos: 2 desplazamiento/reducción
Estado 175 conflictos: 2 desplazamiento/reducción
Estado 176 conflictos: 2 desplazamiento/reducción
Estado 177 conflictos: 2 desplazamiento/reducción
=======
Estado 85 conflictos: 17 reducción/reducción
Estado 123 conflictos: 8 desplazamiento/reducción
Estado 144 conflictos: 1 desplazamiento/reducción
Estado 151 conflictos: 3 desplazamiento/reducción
Estado 177 conflictos: 2 desplazamiento/reducción
Estado 178 conflictos: 2 desplazamiento/reducción
Estado 179 conflictos: 2 desplazamiento/reducción
Estado 180 conflictos: 2 desplazamiento/reducción
Estado 181 conflictos: 2 desplazamiento/reducción
Estado 182 conflictos: 2 desplazamiento/reducción
Estado 183 conflictos: 8 desplazamiento/reducción
Estado 184 conflictos: 8 desplazamiento/reducción
>>>>>>> a159424b9c431d6dade27f7231f081428b21d3ef


Gramática

    0 $accept: v_desc_algoritmo $end

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    2 v_cabecera_alg: v_decl_globales v_decl_a_f v_decl_ent_sal T_COMENTARIO

    3 v_bloque_alg: v_bloque T_COMENTARIO

    4 v_decl_globales: v_declaracion_tipo v_decl_globales
    5                | v_declaracion_cte v_decl_globales
    6                | %empty

    7 v_decl_a_f: v_accion_d v_decl_a_f
    8           | v_funcion_d v_decl_a_f
    9           | %empty

   10 v_bloque: v_declaraciones v_instrucciones

   11 v_declaraciones: v_declaracion_tipo v_declaraciones
   12                | v_declaracion_cte v_declaraciones
   13                | v_declaracion_var v_declaraciones
   14                | %empty

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo T_FTIPO T_COMP_SECUENCIAL

   16 v_declaracion_cte: T_CONST v_lista_d_cte T_FCONST T_COMP_SECUENCIAL

   17 v_declaracion_var: T_VAR v_lista_d_var T_FVAR T_COMP_SECUENCIAL

   18 v_lista_d_tipo: T_ID T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo
   19               | %empty

   20 v_d_tipo: T_TUPLA v_lista_campos T_FTUPLA
   21         | T_TABLA T_INICIO_ARRAY v_expresion_t T_SUBRANGO v_expresion_t T_FIN_ARRAY T_DE v_d_tipo
   22         | T_ID
   23         | v_expresion_t T_SUBRANGO v_expresion_t
   24         | T_REF v_d_tipo
   25         | T_TIPO_BASE

   26 v_expresion_t: v_expresion
   27              | T_LITERAL_CARACTER

   28 v_lista_campos: T_ID T_DEF_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_campos
   29               | %empty

   30 v_lista_d_cte: T_ID T_CREAR_TIPO T_LITERAL T_COMP_SECUENCIAL v_lista_d_cte
   31              | %empty

   32 v_lista_d_var: v_lista_id T_CREAR_TIPO T_ID T_COMP_SECUENCIAL v_lista_d_var
   33              | v_lista_id T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_var
   34              | %empty

   35 v_lista_id: T_ID T_COMA v_lista_id
   36           | T_ID

   37 v_decl_ent_sal: v_decl_ent
   38               | v_decl_ent v_decl_sal
   39               | v_decl_sal

   40 v_decl_ent: T_ENT v_lista_d_var

   41 v_decl_sal: T_SAL v_lista_d_var

   42 v_expresion: v_exp
   43            | v_funcion_ll

   44 v_exp: v_exp T_OP_SUMA v_exp
   45      | v_exp T_OP_RESTA v_exp
   46      | v_exp T_OP_MULTI v_exp
   47      | v_exp T_OP_DIV v_exp
   48      | v_exp T_OP_MOD v_exp
   49      | v_exp T_OP_DIV_ENT v_exp
   50      | T_PARENTESIS_APERTURA v_exp T_PARENTESIS_CLAUSURA
   51      | v_operando
   52      | T_LITERAL_NUMERICO
   53      | T_OP_RESTA v_exp
   54      | v_exp T_Y v_exp
   55      | v_exp T_O v_exp
   56      | T_NO v_exp
   57      | T_VERDADERO
   58      | T_FALSO
   59      | v_exp T_OP_REL_MENOR v_exp
   60      | v_exp T_OP_REL_MAYOR v_exp
   61      | v_exp T_OP_REL_IGUAL v_exp
   62      | v_exp T_OP_REL_DIF v_exp
   63      | v_exp T_OP_REL_MAYOR_IGUAL v_exp
   64      | v_exp T_OP_REL_MENOR_IGUAL v_exp

   65 v_operando: T_IDENTIFICADOR
   66           | v_operando T_PUNTO v_operando
   67           | v_operando T_INICIO_ARRAY v_expresion T_FIN_ARRAY
   68           | v_operando T_REF

   69 v_instrucciones: v_instruccion T_COMP_SECUENCIAL v_instrucciones
   70                | v_instruccion

   71 v_instruccion: T_CONTINUAR
   72              | v_asignacion
   73              | v_alternativa
   74              | v_iteracion
   75              | v_accion_ll

   76 v_asignacion: v_operando T_ASIGNACION v_expresion

   77 v_alternativa: T_SI v_expresion T_SIMBOLO_BLOQUE_IF v_instrucciones v_lista_opciones T_FSI

   78 v_lista_opciones: T_SIMBOLO_ELSE v_expresion T_SI v_instrucciones v_lista_opciones
   79                 | %empty

   80 v_iteracion: v_it_cota_fija
   81            | v_it_cota_exp

   82 v_it_cota_exp: T_MIENTRAS v_expresion T_HACER v_instrucciones T_FMIENTRAS

   83 v_it_cota_fija: T_PARA T_IDENTIFICADOR T_ASIGNACION v_expresion T_HASTA v_expresion T_HACER v_instrucciones T_FPARA

   84 v_accion_d: T_ACCION v_a_cabecera v_bloque T_FACCION

   85 v_funcion_d: T_FUNCION v_f_cabecera v_bloque T_DEV v_expresion T_FFUNCION

   86 v_a_cabecera: T_ID T_PARENTESIS_APERTURA v_d_par_form T_PARENTESIS_CLAUSURA T_COMP_SECUENCIAL

   87 v_f_cabecera: T_ID T_PARENTESIS_APERTURA v_lista_d_var T_PARENTESIS_CLAUSURA T_DEV v_d_tipo T_COMP_SECUENCIAL

   88 v_d_par_form: v_d_p_form T_COMP_SECUENCIAL v_d_par_form
   89             | %empty

   90 v_d_p_form: T_ENT v_lista_id T_DEF_TIPO
   91           | T_SAL v_lista_id T_DEF_TIPO
   92           | T_E_S v_lista_id T_DEF_TIPO

   93 v_accion_ll: T_ID T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

   94 v_funcion_ll: T_ID T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

   95 v_l_ll: v_expresion T_COMA v_l_ll
   96       | v_expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
<<<<<<< HEAD
T_ALGORITMO (258) 1
T_ID (259) 1 18 22 28 30 32 35 36 86 87 93 94
T_COMP_SECUENCIAL (260) 1 15 16 17 18 28 30 32 33 69 86 87 88
T_FALGORITMO (261) 1
T_PUNTO (262) 1 66
T_COMENTARIO (263) 2 3
T_TIPO (264) 15
T_FTIPO (265) 15
T_CONST (266) 16
T_FCONST (267) 16
T_VAR (268) 17
T_FVAR (269) 17
T_CREAR_TIPO (270) 18 30 32 33
T_TUPLA (271) 20
T_FTUPLA (272) 20
T_TABLA (273) 21
T_INICIO_ARRAY (274) 21 67
T_SUBRANGO (275) 21 23
T_FIN_ARRAY (276) 21 67
T_DE (277) 21
T_REF (278) 24 68
T_TIPO_BASE (279) 25
T_LITERAL_CARACTER (280) 27
T_DEF_TIPO (281) 28 90 91 92
T_LITERAL (282) 30
T_COMA (283) 35 95
T_ENT (284) 40 90
T_SAL (285) 41 91
T_OP_SUMA (286) 44
T_OP_RESTA (287) 45 53
T_OP_MULTI (288) 46
T_OP_DIV (289) 47
T_OP_MOD (290) 48
T_OP_DIV_ENT (291) 49
T_PARENTESIS_APERTURA (292) 50 86 87 93 94
T_PARENTESIS_CLAUSURA (293) 50 86 87 93 94
T_LITERAL_NUMERICO (294) 52
T_Y (295) 54
T_O (296) 55
T_NO (297) 56
T_VERDADERO (298) 57
T_FALSO (299) 58
T_OP_REL_MENOR (300) 59
T_OP_REL_MAYOR (301) 60
T_OP_REL_IGUAL (302) 61
T_OP_REL_DIF (303) 62
T_OP_REL_MAYOR_IGUAL (304) 63
T_OP_REL_MENOR_IGUAL (305) 64
T_IDENTIFICADOR (306) 65 83
T_CONTINUAR (307) 71
T_ASIGNACION (308) 76 83
T_SI (309) 77 78
T_SIMBOLO_BLOQUE_IF (310) 77
T_FSI (311) 77
T_SIMBOLO_ELSE (312) 78
T_MIENTRAS (313) 82
T_HACER (314) 82 83
T_FMIENTRAS (315) 82
T_PARA (316) 83
T_HASTA (317) 83
T_FPARA (318) 83
T_ACCION (319) 84
T_FACCION (320) 84
T_FUNCION (321) 85
T_DEV (322) 85 87
T_FFUNCION (323) 85
T_E_S (324) 92
=======
T_OP_SUMA (258) 45
T_OP_RESTA (259) 46 54
T_OP_MULTI (260) 47
T_OP_DIV (261) 48
T_OP_MOD (262) 49
T_OP_DIV_ENT (263) 50
T_OP_REL_MENOR (264) 61
T_OP_REL_MAYOR (265) 62
T_OP_REL_IGUAL (266) 63
T_OP_REL_DIF (267) 64
T_OP_REL_MAYOR_IGUAL (268) 65
T_OP_REL_MENOR_IGUAL (269) 66
T_ALGORITMO (270) 1
T_ID (271) 1 18 22 28 30 32 35 36 89 90 96 97
T_COMP_SECUENCIAL (272) 1 15 16 17 18 28 30 32 33 72 89 90 91
T_FALGORITMO (273) 1
T_PUNTO (274) 1 69
T_COMENTARIO (275) 2 3
T_TIPO (276) 15
T_FTIPO (277) 15
T_CONST (278) 16
T_FCONST (279) 16
T_VAR (280) 17
T_FVAR (281) 17
T_CREAR_TIPO (282) 18 30 32 33
T_TUPLA (283) 20
T_FTUPLA (284) 20
T_TABLA (285) 21
T_INICIO_ARRAY (286) 21 70
T_SUBRANGO (287) 21 23
T_FIN_ARRAY (288) 21 70
T_DE (289) 21
T_REF (290) 24 71
T_TIPO_BASE (291) 25
T_LITERAL_CARACTER (292) 27
T_DEF_TIPO (293) 28 93 94 95
T_LITERAL (294) 30
T_COMA (295) 35 98
T_ENT (296) 40 93
T_SAL (297) 41 94
T_PARENTESIS_APERTURA (298) 51 67 89 90 96 97
T_PARENTESIS_CLAUSURA (299) 51 67 89 90 96 97
T_LITERAL_NUMERICO (300) 53
T_Y (301) 55
T_O (302) 56
T_NO (303) 57
T_VERDADERO (304) 59
T_FALSO (305) 60
T_IDENTIFICADOR (306) 68 86
T_CONTINUAR (307) 74
T_ASIGNACION (308) 79 86
T_SI (309) 80 81
T_SIMBOLO_BLOQUE_IF (310) 80
T_SIMBOLO_ELSE (311) 81
T_FSI (312) 80
T_MIENTRAS (313) 85
T_HACER (314) 85 86
T_FMIENTRAS (315) 85
T_PARA (316) 86
T_HASTA (317) 86
T_FPARA (318) 86
T_ACCION (319) 87
T_FACCION (320) 87
T_FUNCION (321) 88
T_DEV (322) 88 90
T_FFUNCION (323) 88
T_E_S (324) 95
>>>>>>> a159424b9c431d6dade27f7231f081428b21d3ef


No terminales con las reglas donde aparecen

$accept (70)
    en la izquierda: 0
v_desc_algoritmo (71)
    en la izquierda: 1, en la derecha: 0
v_cabecera_alg (72)
    en la izquierda: 2, en la derecha: 1
v_bloque_alg (73)
    en la izquierda: 3, en la derecha: 1
v_decl_globales (74)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
v_decl_a_f (75)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
v_bloque (76)
    en la izquierda: 10, en la derecha: 3 84 85
v_declaraciones (77)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
v_declaracion_tipo (78)
    en la izquierda: 15, en la derecha: 4 11
v_declaracion_cte (79)
    en la izquierda: 16, en la derecha: 5 12
v_declaracion_var (80)
    en la izquierda: 17, en la derecha: 13
v_lista_d_tipo (81)
    en la izquierda: 18 19, en la derecha: 15 18
v_d_tipo (82)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 21 24 28
    33 87
v_expresion_t (83)
    en la izquierda: 26 27, en la derecha: 21 23
v_lista_campos (84)
    en la izquierda: 28 29, en la derecha: 20 28
v_lista_d_cte (85)
    en la izquierda: 30 31, en la derecha: 16 30
v_lista_d_var (86)
    en la izquierda: 32 33 34, en la derecha: 17 32 33 40 41 87
v_lista_id (87)
    en la izquierda: 35 36, en la derecha: 32 33 35 90 91 92
v_decl_ent_sal (88)
    en la izquierda: 37 38 39, en la derecha: 2
v_decl_ent (89)
    en la izquierda: 40, en la derecha: 37 38
v_decl_sal (90)
    en la izquierda: 41, en la derecha: 38 39
v_expresion (91)
    en la izquierda: 42 43, en la derecha: 26 67 76 77 78 82 83 85
    95 96
v_exp (92)
    en la izquierda: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64, en la derecha: 42 44 45 46 47 48 49 50 53 54 55
    56 59 60 61 62 63 64
v_operando (93)
    en la izquierda: 65 66 67 68, en la derecha: 51 66 67 68 76
v_instrucciones (94)
    en la izquierda: 69 70, en la derecha: 10 69 77 78 82 83
v_instruccion (95)
    en la izquierda: 71 72 73 74 75, en la derecha: 69 70
v_asignacion (96)
    en la izquierda: 76, en la derecha: 72
v_alternativa (97)
    en la izquierda: 77, en la derecha: 73
v_lista_opciones (98)
    en la izquierda: 78 79, en la derecha: 77 78
v_iteracion (99)
    en la izquierda: 80 81, en la derecha: 74
v_it_cota_exp (100)
    en la izquierda: 82, en la derecha: 81
v_it_cota_fija (101)
    en la izquierda: 83, en la derecha: 80
v_accion_d (102)
    en la izquierda: 84, en la derecha: 7
v_funcion_d (103)
    en la izquierda: 85, en la derecha: 8
v_a_cabecera (104)
    en la izquierda: 86, en la derecha: 84
v_f_cabecera (105)
    en la izquierda: 87, en la derecha: 85
v_d_par_form (106)
    en la izquierda: 88 89, en la derecha: 86 88
v_d_p_form (107)
    en la izquierda: 90 91 92, en la derecha: 88
v_accion_ll (108)
    en la izquierda: 93, en la derecha: 75
v_funcion_ll (109)
    en la izquierda: 94, en la derecha: 43
v_l_ll (110)
    en la izquierda: 95 96, en la derecha: 93 94 95


Estado 0

    0 $accept: . v_desc_algoritmo $end

    T_ALGORITMO  desplazar e ir al estado 1

    v_desc_algoritmo  ir al estado 2


Estado 1

    1 v_desc_algoritmo: T_ALGORITMO . T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_ID  desplazar e ir al estado 3


Estado 2

    0 $accept: v_desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 v_desc_algoritmo: T_ALGORITMO T_ID . T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_COMP_SECUENCIAL  desplazar e ir al estado 5


Estado 4

    0 $accept: v_desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL . v_cabecera_alg v_bloque_alg T_FALGORITMO T_PUNTO

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_cabecera_alg      ir al estado 8
    v_decl_globales     ir al estado 9
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 6

   15 v_declaracion_tipo: T_TIPO . v_lista_d_tipo T_FTIPO T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (v_lista_d_tipo)

    v_lista_d_tipo  ir al estado 13


Estado 7

   16 v_declaracion_cte: T_CONST . v_lista_d_cte T_FCONST T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 14

    $default  reduce usando la regla 31 (v_lista_d_cte)

    v_lista_d_cte  ir al estado 15


Estado 8

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg . v_bloque_alg T_FALGORITMO T_PUNTO

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7
    T_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_bloque_alg        ir al estado 17
    v_bloque            ir al estado 18
    v_declaraciones     ir al estado 19
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 9

    2 v_cabecera_alg: v_decl_globales . v_decl_a_f v_decl_ent_sal T_COMENTARIO

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 25
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 10

    4 v_decl_globales: v_declaracion_tipo . v_decl_globales

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_decl_globales     ir al estado 28
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 11

    5 v_decl_globales: v_declaracion_cte . v_decl_globales

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (v_decl_globales)

    v_decl_globales     ir al estado 29
    v_declaracion_tipo  ir al estado 10
    v_declaracion_cte   ir al estado 11


Estado 12

   18 v_lista_d_tipo: T_ID . T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo

    T_CREAR_TIPO  desplazar e ir al estado 30


Estado 13

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo . T_FTIPO T_COMP_SECUENCIAL

    T_FTIPO  desplazar e ir al estado 31


Estado 14

   30 v_lista_d_cte: T_ID . T_CREAR_TIPO T_LITERAL T_COMP_SECUENCIAL v_lista_d_cte

    T_CREAR_TIPO  desplazar e ir al estado 32


Estado 15

   16 v_declaracion_cte: T_CONST v_lista_d_cte . T_FCONST T_COMP_SECUENCIAL

    T_FCONST  desplazar e ir al estado 33


Estado 16

   17 v_declaracion_var: T_VAR . v_lista_d_var T_FVAR T_COMP_SECUENCIAL

    T_ID  desplazar e ir al estado 34

    $default  reduce usando la regla 34 (v_lista_d_var)

    v_lista_d_var  ir al estado 35
    v_lista_id     ir al estado 36


Estado 17

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg . T_FALGORITMO T_PUNTO

    T_FALGORITMO  desplazar e ir al estado 37


Estado 18

    3 v_bloque_alg: v_bloque . T_COMENTARIO

    T_COMENTARIO  desplazar e ir al estado 38


Estado 19

   10 v_bloque: v_declaraciones . v_instrucciones

    T_ID             desplazar e ir al estado 39
    T_IDENTIFICADOR  desplazar e ir al estado 40
    T_CONTINUAR      desplazar e ir al estado 41
    T_SI             desplazar e ir al estado 42
    T_MIENTRAS       desplazar e ir al estado 43
    T_PARA           desplazar e ir al estado 44

    v_operando       ir al estado 45
    v_instrucciones  ir al estado 46
    v_instruccion    ir al estado 47
    v_asignacion     ir al estado 48
    v_alternativa    ir al estado 49
    v_iteracion      ir al estado 50
    v_it_cota_exp    ir al estado 51
    v_it_cota_fija   ir al estado 52
    v_accion_ll      ir al estado 53


Estado 20

   11 v_declaraciones: v_declaracion_tipo . v_declaraciones

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7
    T_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 54
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 21

   12 v_declaraciones: v_declaracion_cte . v_declaraciones

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7
    T_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 55
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 22

   13 v_declaraciones: v_declaracion_var . v_declaraciones

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7
    T_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_declaraciones     ir al estado 56
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 23

   84 v_accion_d: T_ACCION . v_a_cabecera v_bloque T_FACCION

    T_ID  desplazar e ir al estado 57

    v_a_cabecera  ir al estado 58


Estado 24

   85 v_funcion_d: T_FUNCION . v_f_cabecera v_bloque T_DEV v_expresion T_FFUNCION

    T_ID  desplazar e ir al estado 59

    v_f_cabecera  ir al estado 60


Estado 25

    2 v_cabecera_alg: v_decl_globales v_decl_a_f . v_decl_ent_sal T_COMENTARIO

    T_ENT  desplazar e ir al estado 61
    T_SAL  desplazar e ir al estado 62

    v_decl_ent_sal  ir al estado 63
    v_decl_ent      ir al estado 64
    v_decl_sal      ir al estado 65


Estado 26

    7 v_decl_a_f: v_accion_d . v_decl_a_f

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 66
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 27

    8 v_decl_a_f: v_funcion_d . v_decl_a_f

    T_ACCION   desplazar e ir al estado 23
    T_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (v_decl_a_f)

    v_decl_a_f   ir al estado 67
    v_accion_d   ir al estado 26
    v_funcion_d  ir al estado 27


Estado 28

    4 v_decl_globales: v_declaracion_tipo v_decl_globales .

    $default  reduce usando la regla 4 (v_decl_globales)


Estado 29

    5 v_decl_globales: v_declaracion_cte v_decl_globales .

    $default  reduce usando la regla 5 (v_decl_globales)


Estado 30

   18 v_lista_d_tipo: T_ID T_CREAR_TIPO . v_d_tipo T_COMP_SECUENCIAL v_lista_d_tipo

    T_OP_RESTA             desplazar e ir al estado 68
    T_ID                   desplazar e ir al estado 69
    T_TUPLA                desplazar e ir al estado 70
    T_TABLA                desplazar e ir al estado 71
    T_REF                  desplazar e ir al estado 72
    T_TIPO_BASE            desplazar e ir al estado 73
    T_LITERAL_CARACTER     desplazar e ir al estado 74
    T_PARENTESIS_APERTURA  desplazar e ir al estado 75
    T_LITERAL_NUMERICO     desplazar e ir al estado 76
    T_NO                   desplazar e ir al estado 77
    T_VERDADERO            desplazar e ir al estado 78
    T_FALSO                desplazar e ir al estado 79
    T_IDENTIFICADOR        desplazar e ir al estado 40

    v_d_tipo       ir al estado 80
    v_expresion_t  ir al estado 81
    v_expresion    ir al estado 82
    v_exp          ir al estado 83
    v_operando     ir al estado 84
    v_funcion_ll   ir al estado 85


Estado 31

   15 v_declaracion_tipo: T_TIPO v_lista_d_tipo T_FTIPO . T_COMP_SECUENCIAL

    T_COMP_SECUENCIAL  desplazar e ir al estado 86


Estado 32

   30 v_lista_d_cte: T_ID T_CREAR_TIPO . T_LITERAL T_COMP_SECUENCIAL v_lista_d_cte

    T_LITERAL  desplazar e ir al estado 87


Estado 33

   16 v_declaracion_cte: T_CONST v_lista_d_cte T_FCONST . T_COMP_SECUENCIAL

    T_COMP_SECUENCIAL  desplazar e ir al estado 88


Estado 34

   35 v_lista_id: T_ID . T_COMA v_lista_id
   36           | T_ID .

    T_COMA  desplazar e ir al estado 89

    $default  reduce usando la regla 36 (v_lista_id)


Estado 35

   17 v_declaracion_var: T_VAR v_lista_d_var . T_FVAR T_COMP_SECUENCIAL

    T_FVAR  desplazar e ir al estado 90


Estado 36

   32 v_lista_d_var: v_lista_id . T_CREAR_TIPO T_ID T_COMP_SECUENCIAL v_lista_d_var
   33              | v_lista_id . T_CREAR_TIPO v_d_tipo T_COMP_SECUENCIAL v_lista_d_var

    T_CREAR_TIPO  desplazar e ir al estado 91


Estado 37

    1 v_desc_algoritmo: T_ALGORITMO T_ID T_COMP_SECUENCIAL v_cabecera_alg v_bloque_alg T_FALGORITMO . T_PUNTO

    T_PUNTO  desplazar e ir al estado 92


Estado 38

    3 v_bloque_alg: v_bloque T_COMENTARIO .

    $default  reduce usando la regla 3 (v_bloque_alg)


Estado 39

   93 v_accion_ll: T_ID . T_PARENTESIS_APERTURA v_l_ll T_PARENTESIS_CLAUSURA

    T_PARENTESIS_APERTURA  desplazar e ir al estado 93


Estado 40

   65 v_operando: T_IDENTIFICADOR .

    $default  reduce usando la regla 65 (v_operando)


Estado 41

   71 v_instruccion: T_CONTINUAR .

    $default  reduce usando la regla 71 (v_instruccion)


Estado 42

   77 v_alternativa: T_SI . v_expresion T_SIMBOLO_BLOQUE_IF v_instrucciones v_lista_opciones T_FSI

<<<<<<< HEAD
    T_ID                   desplazar e ir al estado 94
    T_OP_RESTA             desplazar e ir al estado 74
=======
    T_OP_RESTA             desplazar e ir al estado 68
    T_ID                   desplazar e ir al estado 95
>>>>>>> a159424b9c431d6dade27f7231f081428b21d3ef
    T_PARENTESIS_APERTURA  desplazar e ir al estado 75
    T_LITERAL_NUMERICO     desplazar e ir al estado 76
    T_NO                   desplazar e ir al estado 77
    T_VERDADERO            desplazar e ir al estado 78
    T_FALSO                desplazar e ir al estado 79
    T_IDENTIFICADOR        desplazar e ir al estado 40

    v_expresion   ir al estado 95
    v_exp         ir al estado 83
    v_operando    ir al estado 84
    v_funcion_ll  ir al estado 85


Estado 43

   82 v_it_cota_exp: T_MIENTRAS . v_expresion T_HACER v_instrucciones T_FMIENTRAS

<<<<<<< HEAD
    T_ID                   desplazar e ir al estado 94
    T_OP_RESTA             desplazar e ir al estado 74
=======
    T_OP_RESTA             desplazar e ir al estado 68
    T_ID                   desplazar e ir al estado 95
>>>>>>> a159424b9c431d6dade27f7231f081428b21d3ef
    T_PARENTESIS_APERTURA  desplazar e ir al estado 75
    T_LITERAL_NUMERICO     desplazar e ir al estado 76
    T_NO                   desplazar e ir al estado 77
    T_VERDADERO            desplazar e ir al estado 78
    T_FALSO                desplazar e ir al estado 79
    T_IDENTIFICADOR        desplazar e ir al estado 40

    v_expresion   ir al estado 96
    v_exp         ir al estado 83
    v_operando    ir al estado 84
    v_funcion_ll  ir al estado 85


Estado 44

   83 v_it_cota_fija: T_PARA . T_IDENTIFICADOR T_ASIGNACION v_expresion T_HASTA v_expresion T_HACER v_instrucciones T_FPARA

    T_IDENTIFICADOR  desplazar e ir al estado 97


Estado 45

   66 v_operando: v_operando . T_PUNTO v_operando
   67           | v_operando . T_INICIO_ARRAY v_expresion T_FIN_ARRAY
   68           | v_operando . T_REF
   76 v_asignacion: v_operando . T_ASIGNACION v_expresion

    T_PUNTO         desplazar e ir al estado 98
    T_INICIO_ARRAY  desplazar e ir al estado 99
    T_REF           desplazar e ir al estado 100
    T_ASIGNACION    desplazar e ir al estado 101


Estado 46

   10 v_bloque: v_declaraciones v_instrucciones .

    $default  reduce usando la regla 10 (v_bloque)


Estado 47

   69 v_instrucciones: v_instruccion . T_COMP_SECUENCIAL v_instrucciones
   70                | v_instruccion .

    T_COMP_SECUENCIAL  desplazar e ir al estado 102

    $default  reduce usando la regla 70 (v_instrucciones)


Estado 48

   72 v_instruccion: v_asignacion .

    $default  reduce usando la regla 72 (v_instruccion)


Estado 49

   73 v_instruccion: v_alternativa .

    $default  reduce usando la regla 73 (v_instruccion)


Estado 50

   74 v_instruccion: v_iteracion .

    $default  reduce usando la regla 74 (v_instruccion)


Estado 51

   81 v_iteracion: v_it_cota_exp .

    $default  reduce usando la regla 81 (v_iteracion)


Estado 52

   80 v_iteracion: v_it_cota_fija .

    $default  reduce usando la regla 80 (v_iteracion)


Estado 53

   75 v_instruccion: v_accion_ll .

    $default  reduce usando la regla 75 (v_instruccion)


Estado 54

   11 v_declaraciones: v_declaracion_tipo v_declaraciones .

    $default  reduce usando la regla 11 (v_declaraciones)


Estado 55

   12 v_declaraciones: v_declaracion_cte v_declaraciones .

    $default  reduce usando la regla 12 (v_declaraciones)


Estado 56

   13 v_declaraciones: v_declaracion_var v_declaraciones .

    $default  reduce usando la regla 13 (v_declaraciones)


Estado 57

   86 v_a_cabecera: T_ID . T_PARENTESIS_APERTURA v_d_par_form T_PARENTESIS_CLAUSURA T_COMP_SECUENCIAL

    T_PARENTESIS_APERTURA  desplazar e ir al estado 103


Estado 58

   84 v_accion_d: T_ACCION v_a_cabecera . v_bloque T_FACCION

    T_TIPO   desplazar e ir al estado 6
    T_CONST  desplazar e ir al estado 7
    T_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (v_declaraciones)

    v_bloque            ir al estado 104
    v_declaraciones     ir al estado 19
    v_declaracion_tipo  ir al estado 20
    v_declaracion_cte   ir al estado 21
    v_declaracion_var   ir al estado 22


Estado 59
